allow having multiple jobs

--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,14 @@
   </head>
   <body>
     <nav>
-      <a href="login.html">Login</a>
-      <a href="signup.html">Sign Up</a>
-      <a href="logout">Logout</a>
-      <p id="usr"></p>
+      <div>
+        <a href="login.html">Login</a>
+        <a href="signup.html">Sign Up</a>
+        <a href="logout">Logout</a>
+      </div>
+      <span id="usr"></span>
     </nav>
+    <div id="jobs"></div>
     <div id="content">
       <div class="column">
         <h3>Hours since <span id="hoursSinceDate"></span>: <span id="hoursSince"></span></h3>
