--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>ClockIn</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
   </head>
   <body>
     <nav>
@@ -22,9 +23,9 @@
           <input id="hoursSinceSubmit" type="submit" value="Submit">
           <input id="payrollNow" type="submit" value="Payroll">
         </div>
-        <h3 style="margin-bottom: 5px;">Hours logged today: <span id="hoursToday"></span></h3>
-        <h3 style="margin-bottom: 5px; margin-top: 0;">Hours logged this week: <span id="hoursThisWeek"></span></h3>
-        <h3 style="margin-bottom: 5px; margin-top: 0;">Hours logged this month: <span id="hoursThisMonth"></span></h3>
+        <h3 style="margin-bottom: 0.313rem;">Hours logged today: <span id="hoursToday"></span></h3>
+        <h3 style="margin-bottom: 0.313rem; margin-top: 0;">Hours logged this week: <span id="hoursThisWeek"></span></h3>
+        <h3 style="margin-bottom: 0.313rem; margin-top: 0;">Hours logged this month: <span id="hoursThisMonth"></span></h3>
         <h2 id="totalHoursHeading">Total Hours Logged:</h2>
         <div>
           <button onclick="hoursTab = 0; updateLists(data)">Per Day</button>
